add file structure to api module.

--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,9 @@
                 </property>
             </activation>
             <properties>
+                <angular.build.script>run-script build:watch</angular.build.script>
                 <spring.profiles.active>dev</spring.profiles.active>
             </properties>
-            <modules>
-                <module>portal-restapi</module>
-            </modules>
         </profile>
         <profile>
             <id>production</id>
@@ -30,12 +28,10 @@
                 </property>
             </activation>
             <properties>
+                <angular.build.script>run-script build:prod</angular.build.script>
                 <spring.profiles.active>prod</spring.profiles.active>
             </properties>
-            <modules>
-                <module>portal-application</module>
-                <module>portal-restapi</module>
-            </modules>
+
         </profile>
     </profiles>
     <groupId>vn.evnhcmc.itc</groupId>
@@ -50,6 +46,10 @@
         <version>2.3.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <modules>
+        <module>portal-application</module>
+        <module>portal-restapi</module>
+    </modules>
 
     <properties>
         <java.version>11</java.version>
