--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <properties>
+        <java.version>11</java.version>
+        <oracle.version>19.3.0.0</oracle.version>
+        <node.version>v12.18.4</node.version>
+        <npm.version>6.14.8</npm.version>
+        <springdoc.version>1.4.6</springdoc.version>
+    </properties>
     <profiles>
         <profile>
             <id>development</id>
@@ -15,7 +22,6 @@
                 </property>
             </activation>
             <properties>
-                <angular.build.script>run-script build:watch</angular.build.script>
                 <spring.profiles.active>dev</spring.profiles.active>
             </properties>
         </profile>
@@ -28,7 +34,6 @@
                 </property>
             </activation>
             <properties>
-                <angular.build.script>run-script build:prod</angular.build.script>
                 <spring.profiles.active>prod</spring.profiles.active>
             </properties>
 
@@ -51,13 +56,7 @@
         <module>portal-restapi</module>
     </modules>
 
-    <properties>
-        <java.version>11</java.version>
-        <oracle.version>19.3.0.0</oracle.version>
-        <node.version>v12.18.4</node.version>
-        <npm.version>6.14.8</npm.version>
-        <springdoc.version>1.4.6</springdoc.version>
-    </properties>
+
 
     <dependencies>
         <dependency>
@@ -93,8 +92,8 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc10</artifactId>
+            <groupId>com.oracle.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
             <version>${oracle.version}</version>
             <exclusions>
                 <exclusion>
