--- a/portal-application/angular.json
+++ b/portal-application/angular.json
@@ -3,13 +3,9 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "asset-portal-application": {
+    "asset-portal-management": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -17,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../portal-restapi/src/main/resources/static",
+            "outputPath": "/portal-restapi/src/main/resources/static",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -66,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "asset-portal-application:build"
+            "browserTarget": "asset-portal-management:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "asset-portal-application:build:production"
+              "browserTarget": "asset-portal-management:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "asset-portal-application:build"
+            "browserTarget": "asset-portal-management:build"
           }
         },
         "test": {
@@ -92,7 +88,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": []
           }
@@ -114,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "asset-portal-application:serve"
+            "devServerTarget": "asset-portal-management:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "asset-portal-application:serve:production"
+              "devServerTarget": "asset-portal-management:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "asset-portal-application"
+  "defaultProject": "asset-portal-management"
 }
