--- a/portal-application/pom.xml
+++ b/portal-application/pom.xml
@@ -64,7 +64,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>${angular.build.script}</arguments>
+              <arguments>run-script build:prod</arguments>
             </configuration>
           </execution>
         </executions>
